--- a/ProjektZtp.csproj
+++ b/ProjektZtp.csproj
@@ -52,6 +52,12 @@
     <Compile Include="AiSetupControl.Designer.cs">
       <DependentUpon>AiSetupControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="ChooseGameModeControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ChooseGameModeControl.Designer.cs">
+      <DependentUpon>ChooseGameModeControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="ChooseGamePropertiesControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -70,6 +76,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Game.cs" />
     <Compile Include="MainGameControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -80,6 +87,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="AiSetupControl.resx">
       <DependentUpon>AiSetupControl.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="ChooseGameModeControl.resx">
+      <DependentUpon>ChooseGameModeControl.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ChooseGamePropertiesControl.resx">
       <DependentUpon>ChooseGamePropertiesControl.cs</DependentUpon>
