--- a/ProjektZtp.csproj
+++ b/ProjektZtp.csproj
@@ -52,6 +52,7 @@
     <Compile Include="AiSetupControl.Designer.cs">
       <DependentUpon>AiSetupControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Board.cs" />
     <Compile Include="ChooseGameModeControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -70,6 +71,7 @@
     <Compile Include="ChooseOpponentControl.Designer.cs">
       <DependentUpon>ChooseOpponentControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Fleet.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -89,8 +91,10 @@
     <Compile Include="PlaceShipsControl.Designer.cs">
       <DependentUpon>PlaceShipsControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShotResult.cs" />
     <EmbeddedResource Include="AiSetupControl.resx">
       <DependentUpon>AiSetupControl.cs</DependentUpon>
     </EmbeddedResource>
