--- a/ProjektZtp.csproj
+++ b/ProjektZtp.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strategy.cs" />
     <Compile Include="ShotResult.cs" />
     <EmbeddedResource Include="AiSetupControl.resx">
       <DependentUpon>AiSetupControl.cs</DependentUpon>
